<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputFirstNum"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="168dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateText"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputFirstNumX"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/inputFirstNum" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLastNum"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="168dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/inputFirstNum"
        app:layout_constraintTop_toBottomOf="@+id/CreateText"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLastNumX"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/inputLastNum" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="167dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/google" />

    <TextView
        android:id="@+id/CreateText"
        android:layout_width="352dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/CreateText"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateText"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameX"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/hintUsername"
        android:layout_width="330dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/hintUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="168dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintUsername"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassX"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/inputPass"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="168dp"
        android:layout_height="44dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toEndOf="@+id/inputPass"
        app:layout_constraintTop_toBottomOf="@+id/hintUsername"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassX"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/confirmPass"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/hintPass"
        android:layout_width="331dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/hintPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPass" />

</androidx.constraintlayout.widget.ConstraintLayout>